--- a/BookStore/Views/Search1/ItemPartial.cshtml
+++ b/BookStore/Views/Search1/ItemPartial.cshtml
@@ -39,14 +39,17 @@
                 <form action="#" method="post">
                     <input type="hidden" name="cmd" value="_cart">
                     <input type="hidden" name="add" value="1">
-                    <input type="hidden" name="chr_item" value="Book1">
-                    <input type="hidden" name="amount" value="100.00">
-                    <a href="#" class="chr-cart" style="padding-top: 10px; padding-bottom:10px" onclick="updateCart('add',@item.ID, event)">
+                    <input type="hidden" name="chr_item" value="@item.Name">
+                    <input type="hidden" name="amount" value="@item.Price">
+                    <a href="" class="chr-cart" style="color: white;padding-top: 10px; padding-bottom:10px" onclick="updateCart('add',@item.ID, event)">
                         <p hidden>@item.ID</p>
                         <i class="fa fa-cart-plus" aria-hidden="true"></i>
                         Thêm vào giỏ
                     </a>
-
+                    @*<button type="submit" class="chr-cart pchr-cart">
+                        Thêm vào giỏ
+                        <i class="fa fa-cart-plus" aria-hidden="true"></i>
+                    </button>*@
                     <a href="#" data-toggle="modal" data-target="#myModal1"></a>
                 </form>
             </div>
