--- a/BookStore/Views/Search1/ItemPartial.cshtml
+++ b/BookStore/Views/Search1/ItemPartial.cshtml
@@ -6,7 +6,7 @@
 @foreach (var item in Model)
 {
     <div class="col-md-3 product-men" style="margin-bottom:20px">
-        <div class="product-chr-info chr">
+        <div class="product-chr-info chr"> <a href="/Products/Single/@item.ID">
             <div class="thumbnail">
                 @if (string.IsNullOrEmpty(item.AvatarImage))
                 {
@@ -20,8 +20,8 @@
                          onerror="if (this.src != '/Assets/images/home/default-image.png') this.src = '/Assets/images/home/default-image.png';" />
                 }
 
-            </div>
-            <div class="caption">
+            </div></a>
+            <a href="/Products/Single/@item.ID"><div class="caption">
                 <div class="title-caption">
                     <h4 style="text-overflow: ellipsis;white-space:nowrap;overflow:hidden"><b>@item.Name</b></h4>
                     <span class="tooltiptext">@item.Name</span>
@@ -52,7 +52,7 @@
                     </button>*@
                     <a href="#" data-toggle="modal" data-target="#myModal1"></a>
                 </form>
-            </div>
+            </div></a>
         </div>
     </div>
 }
