--- a/BookStore/Views/MyShared/Navbar.cshtml
+++ b/BookStore/Views/MyShared/Navbar.cshtml
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <h1>
-                    <a class="navbar-brand" href="index.html">UIT</a>
+                    <a class="navbar-brand" href="/Home/Index">UIT</a>
                 </h1>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
