--- a/BookStore/Views/Search/SideSearch.cshtml
+++ b/BookStore/Views/Search/SideSearch.cshtml
@@ -76,7 +76,7 @@
 </div>
 
 
-<link href="~/Assets/css/bootstrap.min.css" rel="stylesheet">
+@*<link href="~/Assets/css/bootstrap.min.css" rel="stylesheet">*@
 <link href="~/Assets/css/bootstrap-select.min.css" rel="stylesheet">
 
 @*<script src="~/Assets/js/jquery.js" type="text/javascript"></script>*@
