--- a/BookStore/Views/Shared/Admin_Layout.cshtml
+++ b/BookStore/Views/Shared/Admin_Layout.cshtml
@@ -7,7 +7,7 @@
 <html lang="en">
 <head>
     <!-- Bootstrap Core CSS -->
-    <link href="~/Assets/css/bootstrap.min.css" rel="stylesheet">
+    @*<link href="~/Assets/css/bootstrap.min.css" rel="stylesheet">*@
 
     <!-- Bootstrap Select CSS -->
     <link href="~/Assets/css/bootstrap-select.min.css" rel="stylesheet">
