--- a/BookStore/Views/Shared/Header1.cshtml
+++ b/BookStore/Views/Shared/Header1.cshtml
@@ -49,7 +49,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <h1>
-                    <a class="navbar-brand" href="index.html">Chronicle</a>
+                    <a class="navbar-brand" href="/Home/Index">Chronicle</a>
                 </h1>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
