--- a/BookStore/Views/Search/Index.cshtml
+++ b/BookStore/Views/Search/Index.cshtml
@@ -60,7 +60,7 @@
         </div>
     </div>
 </section>
-<link href="~/Assets/css/bootstrap.min.css" rel="stylesheet">
+@*<link href="~/Assets/css/bootstrap.min.css" rel="stylesheet">*@
 <link href="~/Assets/css/price-range.css" rel="stylesheet">
 <script src="~/Assets/js/price-range.js" type="text/javascript"></script>
 @*<script src="~/Assets/js/jquery-3.1.1.min.js" type="text/javascript"></script>*@
