--- a/BookStore/Views/Shared/ItemPartial.cshtml
+++ b/BookStore/Views/Shared/ItemPartial.cshtml
@@ -6,7 +6,7 @@
 @foreach (var item in Model)
 {
     <div class="col-md-3 product-men" style="margin-bottom:20px">
-        <div class="product-chr-info chr">
+        <div class="product-chr-info chr"> <a href="/Products/Single/@item.ID">
             <div class="thumbnail">
                 @if (string.IsNullOrEmpty(item.AvatarImage))
                 {
@@ -20,10 +20,10 @@
                          onerror="if (this.src != '/Assets/images/home/default-image.png') this.src = '/Assets/images/home/default-image.png';" />
                 }
 
-            </div>
-            <div class="caption">
+            </div></a>
+            <a href="/Products/Single/@item.ID"><div class="caption">
                 <div class="title-caption">
-                    <h4 style="text-overflow: ellipsis;white-space:nowrap;overflow:hidden"><b>@item.Name</b></h4>
+                    <h4 @*style="text-overflow: ellipsis;white-space:nowrap;overflow:hidden"*@><b>@item.Name</b></h4>
                     <span class="tooltiptext">@item.Name</span>
                 </div>
 
@@ -41,7 +41,7 @@
                     <input type="hidden" name="add" value="1">
                     <input type="hidden" name="chr_item" value="@item.Name">
                     <input type="hidden" name="amount" value="@item.Price">
-                    <a href="" class="chr-cart" style="color: white;padding-top: 10px; padding-bottom:10px" onclick="updateCart('add',@item.ID, event)">
+                    <a href="" class="chr-cart" onclick="updateCart('add',@item.ID, event)">
                         <p hidden>@item.ID</p>
                         <i class="fa fa-cart-plus" aria-hidden="true"></i>
                         Thêm vào giỏ
@@ -52,7 +52,7 @@
                     </button>*@
                     <a href="#" data-toggle="modal" data-target="#myModal1"></a>
                 </form>
-            </div>
+            </div></a>
         </div>
     </div>
 }
