--- a/BookStore/Views/Shared/_MainLayout.cshtml
+++ b/BookStore/Views/Shared/_MainLayout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
-    <link href="~/Assets/css/bootstrap.min.css" rel="stylesheet">
+    @*<link href="~/Assets/css/bootstrap.min.css" rel="stylesheet">*@
     <link href="~/Assets/css/font-awesome.min.css" rel="stylesheet">
     <link href="~/Assets/css/price-range.css" rel="stylesheet">
     <link href="~/Assets/css/main.css" rel="stylesheet">
