--- a/BookStore/Views/Search1/SideSearch.cshtml
+++ b/BookStore/Views/Search1/SideSearch.cshtml
@@ -85,7 +85,7 @@
     </div>
 </div><!--/price-range-->
 
-<link href="~/Assets/css/bootstrap.css" rel="stylesheet">
+@*<link href="~/Assets/css/bootstrap.css" rel="stylesheet">*@
 <link href="~/Assets/css/bootstrap-select.min.css" rel="stylesheet">
 <script src="~/Assets/js/jquery.js" type="text/javascript"></script>
 @*<script src="~/Assets/js/price-range.js" type="text/javascript"></script>*@
