--- a/BookStore/Views/MyShared/Navbar.cshtml
+++ b/BookStore/Views/MyShared/Navbar.cshtml
@@ -64,4 +64,24 @@
         <!-- /.container -->
     </div>
 </nav>
+<script>
+    // 1 số browser hỗ trợ html keyword 'onsearch' cho searchbox, nhưng 1 số browser thì không
+    // nên ta không sử dụng 'onsearch' mà dùng onkeypressed, và bắt phím 'enter' thủ công
+    // được gọi từ search_box
+    function onKeypressSearch(e) {
+        var keynum;
+
+        if (window.event) { // IE
+            keynum = e.keyCode;
+        } else if (e.which) { // Netscape/Firefox/Opera
+            keynum = e.which;
+        }
+
+        // phím enter
+        if (keynum == 13) {
+            // hàm này nằm ở page (e.g. Index, Author, etc.)
+            onSearch();
+        }
+    }
+</script>
 
