click "add-to-cart" now popup cart

--- a/BookStore/Views/MyShared/MainLayout.cshtml
+++ b/BookStore/Views/MyShared/MainLayout.cshtml
@@ -159,6 +159,7 @@
                 success: function (data) {
                     $("#staplesbmincart").html("");
                     $("#staplesbmincart").append(data);
+                    onClickedCart();
                     //alert(data);
                     //$(".cart-info").append(data);
                 }
