--- a/BookStore/Assets/css/shop.css
+++ b/BookStore/Assets/css/shop.css
@@ -911,8 +911,8 @@ h3.shopf-sear-headits-sear-head {
     padding: 6px 10px;
     border-radius: 4px;
     color: mintcream;
-    background-color: #e01414;
-    text-align:center;
+    background-color: #ee4f4f;
+    text-align: center;
 }
 
 .fteam_grid_info {
