--- a/BookStore/Views/Home1/Index.cshtml
+++ b/BookStore/Views/Home1/Index.cshtml
@@ -40,7 +40,7 @@
 <section style="margin-top:100px">
     <div class="container">
         <div class="row">
-            <div class="col-lg-3" style="background-color: #eee">
+            <div class="col-lg-3" style="background-color: #eee;padding-top:10px">
                 <div class="left-sidebar">
                     @Html.Partial("SideMenu")
                 </div>
